parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    FI
    MULTIPLECOMMENT
    RETURN
    SINGLECOMMENT
    SQRLEFT
    SQRRIGHT

Grammar

Rule 0     S' -> program
Rule 1     program -> main
Rule 2     main -> MAIN KEYLEFT declarations KEYRIGHT
Rule 3     declarations -> declarations declaration
Rule 4     declarations -> declaration
Rule 5     declaration -> declaration_variable
Rule 6     declaration -> statement
Rule 7     declaration_variable -> type variable DOTCOMMA
Rule 8     variable -> variable COMMA IDENTIFIER
Rule 9     variable -> IDENTIFIER
Rule 10    type -> BOOLEAN
Rule 11    type -> INTEGER
Rule 12    type -> DOUBLE
Rule 13    statements -> statements statement
Rule 14    statements -> statement
Rule 15    statement -> compound_statement
Rule 16    statement -> assign_statement
Rule 17    statement -> select_statement
Rule 18    statement -> iteration_statement
Rule 19    statement -> cin_statement
Rule 20    statement -> cout_statement
Rule 21    statement -> switch_statement
Rule 22    statement -> doublefacts
Rule 23    compound_statement -> KEYLEFT statements KEYRIGHT
Rule 24    assign_statement -> IDENTIFIER ASSIGN expression DOTCOMMA
Rule 25    select_statement -> IF PARLEFT expression PARRIGHT compound_statement
Rule 26    select_statement -> IF PARLEFT expression PARRIGHT compound_statement OTHERWISE compound_statement
Rule 27    iteration_statement -> WHILE PARLEFT expression PARRIGHT compound_statement
Rule 28    iteration_statement -> DO compound_statement WHILE PARLEFT expression PARRIGHT DOTCOMMA
Rule 29    switch_statement -> SWITCH PARLEFT expression PARRIGHT KEYLEFT case_list KEYRIGHT
Rule 30    case_list -> case_list case_statement
Rule 31    case_list -> case_statement
Rule 32    case_statement -> CASE facts DOUBLEDOT statements BREAK DOTCOMMA
Rule 33    cin_statement -> CIN IDENTIFIER DOTCOMMA
Rule 34    cout_statement -> COUT expression DOTCOMMA
Rule 35    expression -> simple_expression relation_operator simple_expression
Rule 36    expression -> simple_expression
Rule 37    relation_operator -> EQUALS
Rule 38    relation_operator -> NOTEQUAL
Rule 39    relation_operator -> LESS
Rule 40    relation_operator -> LESSEQUAL
Rule 41    relation_operator -> GREAT
Rule 42    relation_operator -> GREATEQUAL
Rule 43    relation_operator -> AND
Rule 44    relation_operator -> OR
Rule 45    simple_expression -> simple_expression sum_operator term
Rule 46    simple_expression -> term
Rule 47    sum_operator -> SUM
Rule 48    sum_operator -> MINUS
Rule 49    term -> term mult_operator factor
Rule 50    term -> factor
Rule 51    mult_operator -> TIMES
Rule 52    mult_operator -> DIVISION
Rule 53    mult_operator -> MODULE
Rule 54    factor -> factor pot_operator component
Rule 55    factor -> component
Rule 56    pot_operator -> POW
Rule 57    doublefacts -> IDENTIFIER SUMDOUBLE DOTCOMMA
Rule 58    doublefacts -> IDENTIFIER MINUSDOUBLE DOTCOMMA
Rule 59    component -> PARLEFT expression PARRIGHT
Rule 60    component -> IDENTIFIER
Rule 61    component -> facts
Rule 62    component -> doublefacts
Rule 63    facts -> NUMBER
Rule 64    facts -> REALNUMBER
Rule 65    facts -> BOOL
Rule 66    empty -> <empty>

Terminals, with rules where they appear

AND                  : 43
ASSIGN               : 24
BOOL                 : 65
BOOLEAN              : 10
BREAK                : 32
CASE                 : 32
CIN                  : 33
COMMA                : 8
COUT                 : 34
DIVISION             : 52
DO                   : 28
DOTCOMMA             : 7 24 28 32 33 34 57 58
DOUBLE               : 12
DOUBLEDOT            : 32
EQUALS               : 37
FI                   : 
GREAT                : 41
GREATEQUAL           : 42
IDENTIFIER           : 8 9 24 33 57 58 60
IF                   : 25 26
INTEGER              : 11
KEYLEFT              : 2 23 29
KEYRIGHT             : 2 23 29
LESS                 : 39
LESSEQUAL            : 40
MAIN                 : 2
MINUS                : 48
MINUSDOUBLE          : 58
MODULE               : 53
MULTIPLECOMMENT      : 
NOTEQUAL             : 38
NUMBER               : 63
OR                   : 44
OTHERWISE            : 26
PARLEFT              : 25 26 27 28 29 59
PARRIGHT             : 25 26 27 28 29 59
POW                  : 56
REALNUMBER           : 64
RETURN               : 
SINGLECOMMENT        : 
SQRLEFT              : 
SQRRIGHT             : 
SUM                  : 47
SUMDOUBLE            : 57
SWITCH               : 29
TIMES                : 51
WHILE                : 27 28
error                : 

Nonterminals, with rules where they appear

assign_statement     : 16
case_list            : 29 30
case_statement       : 30 31
cin_statement        : 19
component            : 54 55
compound_statement   : 15 25 26 26 27 28
cout_statement       : 20
declaration          : 3 4
declaration_variable : 5
declarations         : 2 3
doublefacts          : 22 62
empty                : 
expression           : 24 25 26 27 28 29 34 59
factor               : 49 50 54
facts                : 32 61
iteration_statement  : 18
main                 : 1
mult_operator        : 49
pot_operator         : 54
program              : 0
relation_operator    : 35
select_statement     : 17
simple_expression    : 35 35 36 45
statement            : 6 13 14
statements           : 13 23 32
sum_operator         : 45
switch_statement     : 21
term                 : 45 46 49
type                 : 7
variable             : 7 8

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . main
    (2) main -> . MAIN KEYLEFT declarations KEYRIGHT

    MAIN            shift and go to state 3

    program                        shift and go to state 1
    main                           shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> main .

    $end            reduce using rule 1 (program -> main .)


state 3

    (2) main -> MAIN . KEYLEFT declarations KEYRIGHT

    KEYLEFT         shift and go to state 4


state 4

    (2) main -> MAIN KEYLEFT . declarations KEYRIGHT
    (3) declarations -> . declarations declaration
    (4) declarations -> . declaration
    (5) declaration -> . declaration_variable
    (6) declaration -> . statement
    (7) declaration_variable -> . type variable DOTCOMMA
    (15) statement -> . compound_statement
    (16) statement -> . assign_statement
    (17) statement -> . select_statement
    (18) statement -> . iteration_statement
    (19) statement -> . cin_statement
    (20) statement -> . cout_statement
    (21) statement -> . switch_statement
    (22) statement -> . doublefacts
    (10) type -> . BOOLEAN
    (11) type -> . INTEGER
    (12) type -> . DOUBLE
    (23) compound_statement -> . KEYLEFT statements KEYRIGHT
    (24) assign_statement -> . IDENTIFIER ASSIGN expression DOTCOMMA
    (25) select_statement -> . IF PARLEFT expression PARRIGHT compound_statement
    (26) select_statement -> . IF PARLEFT expression PARRIGHT compound_statement OTHERWISE compound_statement
    (27) iteration_statement -> . WHILE PARLEFT expression PARRIGHT compound_statement
    (28) iteration_statement -> . DO compound_statement WHILE PARLEFT expression PARRIGHT DOTCOMMA
    (33) cin_statement -> . CIN IDENTIFIER DOTCOMMA
    (34) cout_statement -> . COUT expression DOTCOMMA
    (29) switch_statement -> . SWITCH PARLEFT expression PARRIGHT KEYLEFT case_list KEYRIGHT
    (57) doublefacts -> . IDENTIFIER SUMDOUBLE DOTCOMMA
    (58) doublefacts -> . IDENTIFIER MINUSDOUBLE DOTCOMMA

    BOOLEAN         shift and go to state 19
    INTEGER         shift and go to state 20
    DOUBLE          shift and go to state 21
    KEYLEFT         shift and go to state 5
    IDENTIFIER      shift and go to state 22
    IF              shift and go to state 23
    WHILE           shift and go to state 24
    DO              shift and go to state 25
    CIN             shift and go to state 26
    COUT            shift and go to state 27
    SWITCH          shift and go to state 28

    declarations                   shift and go to state 6
    declaration                    shift and go to state 7
    declaration_variable           shift and go to state 8
    statement                      shift and go to state 9
    type                           shift and go to state 10
    compound_statement             shift and go to state 11
    assign_statement               shift and go to state 12
    select_statement               shift and go to state 13
    iteration_statement            shift and go to state 14
    cin_statement                  shift and go to state 15
    cout_statement                 shift and go to state 16
    switch_statement               shift and go to state 17
    doublefacts                    shift and go to state 18

state 5

    (23) compound_statement -> KEYLEFT . statements KEYRIGHT
    (13) statements -> . statements statement
    (14) statements -> . statement
    (15) statement -> . compound_statement
    (16) statement -> . assign_statement
    (17) statement -> . select_statement
    (18) statement -> . iteration_statement
    (19) statement -> . cin_statement
    (20) statement -> . cout_statement
    (21) statement -> . switch_statement
    (22) statement -> . doublefacts
    (23) compound_statement -> . KEYLEFT statements KEYRIGHT
    (24) assign_statement -> . IDENTIFIER ASSIGN expression DOTCOMMA
    (25) select_statement -> . IF PARLEFT expression PARRIGHT compound_statement
    (26) select_statement -> . IF PARLEFT expression PARRIGHT compound_statement OTHERWISE compound_statement
    (27) iteration_statement -> . WHILE PARLEFT expression PARRIGHT compound_statement
    (28) iteration_statement -> . DO compound_statement WHILE PARLEFT expression PARRIGHT DOTCOMMA
    (33) cin_statement -> . CIN IDENTIFIER DOTCOMMA
    (34) cout_statement -> . COUT expression DOTCOMMA
    (29) switch_statement -> . SWITCH PARLEFT expression PARRIGHT KEYLEFT case_list KEYRIGHT
    (57) doublefacts -> . IDENTIFIER SUMDOUBLE DOTCOMMA
    (58) doublefacts -> . IDENTIFIER MINUSDOUBLE DOTCOMMA

    KEYLEFT         shift and go to state 5
    IDENTIFIER      shift and go to state 22
    IF              shift and go to state 23
    WHILE           shift and go to state 24
    DO              shift and go to state 25
    CIN             shift and go to state 26
    COUT            shift and go to state 27
    SWITCH          shift and go to state 28

    statements                     shift and go to state 29
    statement                      shift and go to state 30
    compound_statement             shift and go to state 11
    assign_statement               shift and go to state 12
    select_statement               shift and go to state 13
    iteration_statement            shift and go to state 14
    cin_statement                  shift and go to state 15
    cout_statement                 shift and go to state 16
    switch_statement               shift and go to state 17
    doublefacts                    shift and go to state 18

state 6

    (2) main -> MAIN KEYLEFT declarations . KEYRIGHT
    (3) declarations -> declarations . declaration
    (5) declaration -> . declaration_variable
    (6) declaration -> . statement
    (7) declaration_variable -> . type variable DOTCOMMA
    (15) statement -> . compound_statement
    (16) statement -> . assign_statement
    (17) statement -> . select_statement
    (18) statement -> . iteration_statement
    (19) statement -> . cin_statement
    (20) statement -> . cout_statement
    (21) statement -> . switch_statement
    (22) statement -> . doublefacts
    (10) type -> . BOOLEAN
    (11) type -> . INTEGER
    (12) type -> . DOUBLE
    (23) compound_statement -> . KEYLEFT statements KEYRIGHT
    (24) assign_statement -> . IDENTIFIER ASSIGN expression DOTCOMMA
    (25) select_statement -> . IF PARLEFT expression PARRIGHT compound_statement
    (26) select_statement -> . IF PARLEFT expression PARRIGHT compound_statement OTHERWISE compound_statement
    (27) iteration_statement -> . WHILE PARLEFT expression PARRIGHT compound_statement
    (28) iteration_statement -> . DO compound_statement WHILE PARLEFT expression PARRIGHT DOTCOMMA
    (33) cin_statement -> . CIN IDENTIFIER DOTCOMMA
    (34) cout_statement -> . COUT expression DOTCOMMA
    (29) switch_statement -> . SWITCH PARLEFT expression PARRIGHT KEYLEFT case_list KEYRIGHT
    (57) doublefacts -> . IDENTIFIER SUMDOUBLE DOTCOMMA
    (58) doublefacts -> . IDENTIFIER MINUSDOUBLE DOTCOMMA

    KEYRIGHT        shift and go to state 31
    BOOLEAN         shift and go to state 19
    INTEGER         shift and go to state 20
    DOUBLE          shift and go to state 21
    KEYLEFT         shift and go to state 5
    IDENTIFIER      shift and go to state 22
    IF              shift and go to state 23
    WHILE           shift and go to state 24
    DO              shift and go to state 25
    CIN             shift and go to state 26
    COUT            shift and go to state 27
    SWITCH          shift and go to state 28

    declaration                    shift and go to state 32
    declaration_variable           shift and go to state 8
    statement                      shift and go to state 9
    type                           shift and go to state 10
    compound_statement             shift and go to state 11
    assign_statement               shift and go to state 12
    select_statement               shift and go to state 13
    iteration_statement            shift and go to state 14
    cin_statement                  shift and go to state 15
    cout_statement                 shift and go to state 16
    switch_statement               shift and go to state 17
    doublefacts                    shift and go to state 18

state 7

    (4) declarations -> declaration .

    KEYRIGHT        reduce using rule 4 (declarations -> declaration .)
    BOOLEAN         reduce using rule 4 (declarations -> declaration .)
    INTEGER         reduce using rule 4 (declarations -> declaration .)
    DOUBLE          reduce using rule 4 (declarations -> declaration .)
    KEYLEFT         reduce using rule 4 (declarations -> declaration .)
    IDENTIFIER      reduce using rule 4 (declarations -> declaration .)
    IF              reduce using rule 4 (declarations -> declaration .)
    WHILE           reduce using rule 4 (declarations -> declaration .)
    DO              reduce using rule 4 (declarations -> declaration .)
    CIN             reduce using rule 4 (declarations -> declaration .)
    COUT            reduce using rule 4 (declarations -> declaration .)
    SWITCH          reduce using rule 4 (declarations -> declaration .)


state 8

    (5) declaration -> declaration_variable .

    KEYRIGHT        reduce using rule 5 (declaration -> declaration_variable .)
    BOOLEAN         reduce using rule 5 (declaration -> declaration_variable .)
    INTEGER         reduce using rule 5 (declaration -> declaration_variable .)
    DOUBLE          reduce using rule 5 (declaration -> declaration_variable .)
    KEYLEFT         reduce using rule 5 (declaration -> declaration_variable .)
    IDENTIFIER      reduce using rule 5 (declaration -> declaration_variable .)
    IF              reduce using rule 5 (declaration -> declaration_variable .)
    WHILE           reduce using rule 5 (declaration -> declaration_variable .)
    DO              reduce using rule 5 (declaration -> declaration_variable .)
    CIN             reduce using rule 5 (declaration -> declaration_variable .)
    COUT            reduce using rule 5 (declaration -> declaration_variable .)
    SWITCH          reduce using rule 5 (declaration -> declaration_variable .)


state 9

    (6) declaration -> statement .

    KEYRIGHT        reduce using rule 6 (declaration -> statement .)
    BOOLEAN         reduce using rule 6 (declaration -> statement .)
    INTEGER         reduce using rule 6 (declaration -> statement .)
    DOUBLE          reduce using rule 6 (declaration -> statement .)
    KEYLEFT         reduce using rule 6 (declaration -> statement .)
    IDENTIFIER      reduce using rule 6 (declaration -> statement .)
    IF              reduce using rule 6 (declaration -> statement .)
    WHILE           reduce using rule 6 (declaration -> statement .)
    DO              reduce using rule 6 (declaration -> statement .)
    CIN             reduce using rule 6 (declaration -> statement .)
    COUT            reduce using rule 6 (declaration -> statement .)
    SWITCH          reduce using rule 6 (declaration -> statement .)


state 10

    (7) declaration_variable -> type . variable DOTCOMMA
    (8) variable -> . variable COMMA IDENTIFIER
    (9) variable -> . IDENTIFIER

    IDENTIFIER      shift and go to state 34

    variable                       shift and go to state 33

state 11

    (15) statement -> compound_statement .

    KEYRIGHT        reduce using rule 15 (statement -> compound_statement .)
    BOOLEAN         reduce using rule 15 (statement -> compound_statement .)
    INTEGER         reduce using rule 15 (statement -> compound_statement .)
    DOUBLE          reduce using rule 15 (statement -> compound_statement .)
    KEYLEFT         reduce using rule 15 (statement -> compound_statement .)
    IDENTIFIER      reduce using rule 15 (statement -> compound_statement .)
    IF              reduce using rule 15 (statement -> compound_statement .)
    WHILE           reduce using rule 15 (statement -> compound_statement .)
    DO              reduce using rule 15 (statement -> compound_statement .)
    CIN             reduce using rule 15 (statement -> compound_statement .)
    COUT            reduce using rule 15 (statement -> compound_statement .)
    SWITCH          reduce using rule 15 (statement -> compound_statement .)
    BREAK           reduce using rule 15 (statement -> compound_statement .)


state 12

    (16) statement -> assign_statement .

    KEYRIGHT        reduce using rule 16 (statement -> assign_statement .)
    BOOLEAN         reduce using rule 16 (statement -> assign_statement .)
    INTEGER         reduce using rule 16 (statement -> assign_statement .)
    DOUBLE          reduce using rule 16 (statement -> assign_statement .)
    KEYLEFT         reduce using rule 16 (statement -> assign_statement .)
    IDENTIFIER      reduce using rule 16 (statement -> assign_statement .)
    IF              reduce using rule 16 (statement -> assign_statement .)
    WHILE           reduce using rule 16 (statement -> assign_statement .)
    DO              reduce using rule 16 (statement -> assign_statement .)
    CIN             reduce using rule 16 (statement -> assign_statement .)
    COUT            reduce using rule 16 (statement -> assign_statement .)
    SWITCH          reduce using rule 16 (statement -> assign_statement .)
    BREAK           reduce using rule 16 (statement -> assign_statement .)


state 13

    (17) statement -> select_statement .

    KEYRIGHT        reduce using rule 17 (statement -> select_statement .)
    BOOLEAN         reduce using rule 17 (statement -> select_statement .)
    INTEGER         reduce using rule 17 (statement -> select_statement .)
    DOUBLE          reduce using rule 17 (statement -> select_statement .)
    KEYLEFT         reduce using rule 17 (statement -> select_statement .)
    IDENTIFIER      reduce using rule 17 (statement -> select_statement .)
    IF              reduce using rule 17 (statement -> select_statement .)
    WHILE           reduce using rule 17 (statement -> select_statement .)
    DO              reduce using rule 17 (statement -> select_statement .)
    CIN             reduce using rule 17 (statement -> select_statement .)
    COUT            reduce using rule 17 (statement -> select_statement .)
    SWITCH          reduce using rule 17 (statement -> select_statement .)
    BREAK           reduce using rule 17 (statement -> select_statement .)


state 14

    (18) statement -> iteration_statement .

    KEYRIGHT        reduce using rule 18 (statement -> iteration_statement .)
    BOOLEAN         reduce using rule 18 (statement -> iteration_statement .)
    INTEGER         reduce using rule 18 (statement -> iteration_statement .)
    DOUBLE          reduce using rule 18 (statement -> iteration_statement .)
    KEYLEFT         reduce using rule 18 (statement -> iteration_statement .)
    IDENTIFIER      reduce using rule 18 (statement -> iteration_statement .)
    IF              reduce using rule 18 (statement -> iteration_statement .)
    WHILE           reduce using rule 18 (statement -> iteration_statement .)
    DO              reduce using rule 18 (statement -> iteration_statement .)
    CIN             reduce using rule 18 (statement -> iteration_statement .)
    COUT            reduce using rule 18 (statement -> iteration_statement .)
    SWITCH          reduce using rule 18 (statement -> iteration_statement .)
    BREAK           reduce using rule 18 (statement -> iteration_statement .)


state 15

    (19) statement -> cin_statement .

    KEYRIGHT        reduce using rule 19 (statement -> cin_statement .)
    BOOLEAN         reduce using rule 19 (statement -> cin_statement .)
    INTEGER         reduce using rule 19 (statement -> cin_statement .)
    DOUBLE          reduce using rule 19 (statement -> cin_statement .)
    KEYLEFT         reduce using rule 19 (statement -> cin_statement .)
    IDENTIFIER      reduce using rule 19 (statement -> cin_statement .)
    IF              reduce using rule 19 (statement -> cin_statement .)
    WHILE           reduce using rule 19 (statement -> cin_statement .)
    DO              reduce using rule 19 (statement -> cin_statement .)
    CIN             reduce using rule 19 (statement -> cin_statement .)
    COUT            reduce using rule 19 (statement -> cin_statement .)
    SWITCH          reduce using rule 19 (statement -> cin_statement .)
    BREAK           reduce using rule 19 (statement -> cin_statement .)


state 16

    (20) statement -> cout_statement .

    KEYRIGHT        reduce using rule 20 (statement -> cout_statement .)
    BOOLEAN         reduce using rule 20 (statement -> cout_statement .)
    INTEGER         reduce using rule 20 (statement -> cout_statement .)
    DOUBLE          reduce using rule 20 (statement -> cout_statement .)
    KEYLEFT         reduce using rule 20 (statement -> cout_statement .)
    IDENTIFIER      reduce using rule 20 (statement -> cout_statement .)
    IF              reduce using rule 20 (statement -> cout_statement .)
    WHILE           reduce using rule 20 (statement -> cout_statement .)
    DO              reduce using rule 20 (statement -> cout_statement .)
    CIN             reduce using rule 20 (statement -> cout_statement .)
    COUT            reduce using rule 20 (statement -> cout_statement .)
    SWITCH          reduce using rule 20 (statement -> cout_statement .)
    BREAK           reduce using rule 20 (statement -> cout_statement .)


state 17

    (21) statement -> switch_statement .

    KEYRIGHT        reduce using rule 21 (statement -> switch_statement .)
    BOOLEAN         reduce using rule 21 (statement -> switch_statement .)
    INTEGER         reduce using rule 21 (statement -> switch_statement .)
    DOUBLE          reduce using rule 21 (statement -> switch_statement .)
    KEYLEFT         reduce using rule 21 (statement -> switch_statement .)
    IDENTIFIER      reduce using rule 21 (statement -> switch_statement .)
    IF              reduce using rule 21 (statement -> switch_statement .)
    WHILE           reduce using rule 21 (statement -> switch_statement .)
    DO              reduce using rule 21 (statement -> switch_statement .)
    CIN             reduce using rule 21 (statement -> switch_statement .)
    COUT            reduce using rule 21 (statement -> switch_statement .)
    SWITCH          reduce using rule 21 (statement -> switch_statement .)
    BREAK           reduce using rule 21 (statement -> switch_statement .)


state 18

    (22) statement -> doublefacts .

    KEYRIGHT        reduce using rule 22 (statement -> doublefacts .)
    BOOLEAN         reduce using rule 22 (statement -> doublefacts .)
    INTEGER         reduce using rule 22 (statement -> doublefacts .)
    DOUBLE          reduce using rule 22 (statement -> doublefacts .)
    KEYLEFT         reduce using rule 22 (statement -> doublefacts .)
    IDENTIFIER      reduce using rule 22 (statement -> doublefacts .)
    IF              reduce using rule 22 (statement -> doublefacts .)
    WHILE           reduce using rule 22 (statement -> doublefacts .)
    DO              reduce using rule 22 (statement -> doublefacts .)
    CIN             reduce using rule 22 (statement -> doublefacts .)
    COUT            reduce using rule 22 (statement -> doublefacts .)
    SWITCH          reduce using rule 22 (statement -> doublefacts .)
    BREAK           reduce using rule 22 (statement -> doublefacts .)


state 19

    (10) type -> BOOLEAN .

    IDENTIFIER      reduce using rule 10 (type -> BOOLEAN .)


state 20

    (11) type -> INTEGER .

    IDENTIFIER      reduce using rule 11 (type -> INTEGER .)


state 21

    (12) type -> DOUBLE .

    IDENTIFIER      reduce using rule 12 (type -> DOUBLE .)


state 22

    (24) assign_statement -> IDENTIFIER . ASSIGN expression DOTCOMMA
    (57) doublefacts -> IDENTIFIER . SUMDOUBLE DOTCOMMA
    (58) doublefacts -> IDENTIFIER . MINUSDOUBLE DOTCOMMA

    ASSIGN          shift and go to state 35
    SUMDOUBLE       shift and go to state 36
    MINUSDOUBLE     shift and go to state 37


state 23

    (25) select_statement -> IF . PARLEFT expression PARRIGHT compound_statement
    (26) select_statement -> IF . PARLEFT expression PARRIGHT compound_statement OTHERWISE compound_statement

    PARLEFT         shift and go to state 38


state 24

    (27) iteration_statement -> WHILE . PARLEFT expression PARRIGHT compound_statement

    PARLEFT         shift and go to state 39


state 25

    (28) iteration_statement -> DO . compound_statement WHILE PARLEFT expression PARRIGHT DOTCOMMA
    (23) compound_statement -> . KEYLEFT statements KEYRIGHT

    KEYLEFT         shift and go to state 5

    compound_statement             shift and go to state 40

state 26

    (33) cin_statement -> CIN . IDENTIFIER DOTCOMMA

    IDENTIFIER      shift and go to state 41


state 27

    (34) cout_statement -> COUT . expression DOTCOMMA
    (35) expression -> . simple_expression relation_operator simple_expression
    (36) expression -> . simple_expression
    (45) simple_expression -> . simple_expression sum_operator term
    (46) simple_expression -> . term
    (49) term -> . term mult_operator factor
    (50) term -> . factor
    (54) factor -> . factor pot_operator component
    (55) factor -> . component
    (59) component -> . PARLEFT expression PARRIGHT
    (60) component -> . IDENTIFIER
    (61) component -> . facts
    (62) component -> . doublefacts
    (63) facts -> . NUMBER
    (64) facts -> . REALNUMBER
    (65) facts -> . BOOL
    (57) doublefacts -> . IDENTIFIER SUMDOUBLE DOTCOMMA
    (58) doublefacts -> . IDENTIFIER MINUSDOUBLE DOTCOMMA

    PARLEFT         shift and go to state 47
    IDENTIFIER      shift and go to state 48
    NUMBER          shift and go to state 51
    REALNUMBER      shift and go to state 52
    BOOL            shift and go to state 53

    expression                     shift and go to state 42
    simple_expression              shift and go to state 43
    term                           shift and go to state 44
    factor                         shift and go to state 45
    component                      shift and go to state 46
    facts                          shift and go to state 49
    doublefacts                    shift and go to state 50

state 28

    (29) switch_statement -> SWITCH . PARLEFT expression PARRIGHT KEYLEFT case_list KEYRIGHT

    PARLEFT         shift and go to state 54


state 29

    (23) compound_statement -> KEYLEFT statements . KEYRIGHT
    (13) statements -> statements . statement
    (15) statement -> . compound_statement
    (16) statement -> . assign_statement
    (17) statement -> . select_statement
    (18) statement -> . iteration_statement
    (19) statement -> . cin_statement
    (20) statement -> . cout_statement
    (21) statement -> . switch_statement
    (22) statement -> . doublefacts
    (23) compound_statement -> . KEYLEFT statements KEYRIGHT
    (24) assign_statement -> . IDENTIFIER ASSIGN expression DOTCOMMA
    (25) select_statement -> . IF PARLEFT expression PARRIGHT compound_statement
    (26) select_statement -> . IF PARLEFT expression PARRIGHT compound_statement OTHERWISE compound_statement
    (27) iteration_statement -> . WHILE PARLEFT expression PARRIGHT compound_statement
    (28) iteration_statement -> . DO compound_statement WHILE PARLEFT expression PARRIGHT DOTCOMMA
    (33) cin_statement -> . CIN IDENTIFIER DOTCOMMA
    (34) cout_statement -> . COUT expression DOTCOMMA
    (29) switch_statement -> . SWITCH PARLEFT expression PARRIGHT KEYLEFT case_list KEYRIGHT
    (57) doublefacts -> . IDENTIFIER SUMDOUBLE DOTCOMMA
    (58) doublefacts -> . IDENTIFIER MINUSDOUBLE DOTCOMMA

    KEYRIGHT        shift and go to state 55
    KEYLEFT         shift and go to state 5
    IDENTIFIER      shift and go to state 22
    IF              shift and go to state 23
    WHILE           shift and go to state 24
    DO              shift and go to state 25
    CIN             shift and go to state 26
    COUT            shift and go to state 27
    SWITCH          shift and go to state 28

    statement                      shift and go to state 56
    compound_statement             shift and go to state 11
    assign_statement               shift and go to state 12
    select_statement               shift and go to state 13
    iteration_statement            shift and go to state 14
    cin_statement                  shift and go to state 15
    cout_statement                 shift and go to state 16
    switch_statement               shift and go to state 17
    doublefacts                    shift and go to state 18

state 30

    (14) statements -> statement .

    KEYRIGHT        reduce using rule 14 (statements -> statement .)
    KEYLEFT         reduce using rule 14 (statements -> statement .)
    IDENTIFIER      reduce using rule 14 (statements -> statement .)
    IF              reduce using rule 14 (statements -> statement .)
    WHILE           reduce using rule 14 (statements -> statement .)
    DO              reduce using rule 14 (statements -> statement .)
    CIN             reduce using rule 14 (statements -> statement .)
    COUT            reduce using rule 14 (statements -> statement .)
    SWITCH          reduce using rule 14 (statements -> statement .)
    BREAK           reduce using rule 14 (statements -> statement .)


state 31

    (2) main -> MAIN KEYLEFT declarations KEYRIGHT .

    $end            reduce using rule 2 (main -> MAIN KEYLEFT declarations KEYRIGHT .)


state 32

    (3) declarations -> declarations declaration .

    KEYRIGHT        reduce using rule 3 (declarations -> declarations declaration .)
    BOOLEAN         reduce using rule 3 (declarations -> declarations declaration .)
    INTEGER         reduce using rule 3 (declarations -> declarations declaration .)
    DOUBLE          reduce using rule 3 (declarations -> declarations declaration .)
    KEYLEFT         reduce using rule 3 (declarations -> declarations declaration .)
    IDENTIFIER      reduce using rule 3 (declarations -> declarations declaration .)
    IF              reduce using rule 3 (declarations -> declarations declaration .)
    WHILE           reduce using rule 3 (declarations -> declarations declaration .)
    DO              reduce using rule 3 (declarations -> declarations declaration .)
    CIN             reduce using rule 3 (declarations -> declarations declaration .)
    COUT            reduce using rule 3 (declarations -> declarations declaration .)
    SWITCH          reduce using rule 3 (declarations -> declarations declaration .)


state 33

    (7) declaration_variable -> type variable . DOTCOMMA
    (8) variable -> variable . COMMA IDENTIFIER

    DOTCOMMA        shift and go to state 57
    COMMA           shift and go to state 58


state 34

    (9) variable -> IDENTIFIER .

    DOTCOMMA        reduce using rule 9 (variable -> IDENTIFIER .)
    COMMA           reduce using rule 9 (variable -> IDENTIFIER .)


state 35

    (24) assign_statement -> IDENTIFIER ASSIGN . expression DOTCOMMA
    (35) expression -> . simple_expression relation_operator simple_expression
    (36) expression -> . simple_expression
    (45) simple_expression -> . simple_expression sum_operator term
    (46) simple_expression -> . term
    (49) term -> . term mult_operator factor
    (50) term -> . factor
    (54) factor -> . factor pot_operator component
    (55) factor -> . component
    (59) component -> . PARLEFT expression PARRIGHT
    (60) component -> . IDENTIFIER
    (61) component -> . facts
    (62) component -> . doublefacts
    (63) facts -> . NUMBER
    (64) facts -> . REALNUMBER
    (65) facts -> . BOOL
    (57) doublefacts -> . IDENTIFIER SUMDOUBLE DOTCOMMA
    (58) doublefacts -> . IDENTIFIER MINUSDOUBLE DOTCOMMA

    PARLEFT         shift and go to state 47
    IDENTIFIER      shift and go to state 48
    NUMBER          shift and go to state 51
    REALNUMBER      shift and go to state 52
    BOOL            shift and go to state 53

    expression                     shift and go to state 59
    simple_expression              shift and go to state 43
    term                           shift and go to state 44
    factor                         shift and go to state 45
    component                      shift and go to state 46
    facts                          shift and go to state 49
    doublefacts                    shift and go to state 50

state 36

    (57) doublefacts -> IDENTIFIER SUMDOUBLE . DOTCOMMA

    DOTCOMMA        shift and go to state 60


state 37

    (58) doublefacts -> IDENTIFIER MINUSDOUBLE . DOTCOMMA

    DOTCOMMA        shift and go to state 61


state 38

    (25) select_statement -> IF PARLEFT . expression PARRIGHT compound_statement
    (26) select_statement -> IF PARLEFT . expression PARRIGHT compound_statement OTHERWISE compound_statement
    (35) expression -> . simple_expression relation_operator simple_expression
    (36) expression -> . simple_expression
    (45) simple_expression -> . simple_expression sum_operator term
    (46) simple_expression -> . term
    (49) term -> . term mult_operator factor
    (50) term -> . factor
    (54) factor -> . factor pot_operator component
    (55) factor -> . component
    (59) component -> . PARLEFT expression PARRIGHT
    (60) component -> . IDENTIFIER
    (61) component -> . facts
    (62) component -> . doublefacts
    (63) facts -> . NUMBER
    (64) facts -> . REALNUMBER
    (65) facts -> . BOOL
    (57) doublefacts -> . IDENTIFIER SUMDOUBLE DOTCOMMA
    (58) doublefacts -> . IDENTIFIER MINUSDOUBLE DOTCOMMA

    PARLEFT         shift and go to state 47
    IDENTIFIER      shift and go to state 48
    NUMBER          shift and go to state 51
    REALNUMBER      shift and go to state 52
    BOOL            shift and go to state 53

    expression                     shift and go to state 62
    simple_expression              shift and go to state 43
    term                           shift and go to state 44
    factor                         shift and go to state 45
    component                      shift and go to state 46
    facts                          shift and go to state 49
    doublefacts                    shift and go to state 50

state 39

    (27) iteration_statement -> WHILE PARLEFT . expression PARRIGHT compound_statement
    (35) expression -> . simple_expression relation_operator simple_expression
    (36) expression -> . simple_expression
    (45) simple_expression -> . simple_expression sum_operator term
    (46) simple_expression -> . term
    (49) term -> . term mult_operator factor
    (50) term -> . factor
    (54) factor -> . factor pot_operator component
    (55) factor -> . component
    (59) component -> . PARLEFT expression PARRIGHT
    (60) component -> . IDENTIFIER
    (61) component -> . facts
    (62) component -> . doublefacts
    (63) facts -> . NUMBER
    (64) facts -> . REALNUMBER
    (65) facts -> . BOOL
    (57) doublefacts -> . IDENTIFIER SUMDOUBLE DOTCOMMA
    (58) doublefacts -> . IDENTIFIER MINUSDOUBLE DOTCOMMA

    PARLEFT         shift and go to state 47
